# ttWCA_Real

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  ChangeLog  README.md  branches_list.py  nominal_loose_branches.txt
Root/: LinkDef.h  NLeptonSelector.cxx  ttWCA.cxx  ttWCALoader.cxx
configs/: twz_config.txt
grid/: checkSamples.py  data.txt  mc16a.txt  mc16d.txt  mc16e.txt  submitJobs.py
plotter/: reader.py
plotter/HISTOS/: doc.txt
plotter/Selector/: ttWSelector.cxx
python/: submitJobs.py
scripts/: checkCutflow.py  clean.sh  delete-rule.py  makeList.py  mergeCampaigns.py  mergeDatasets.py  output.root.tmp  renameFiles.py  setup.sh
share/: Config_Simple.txt  Config_ttWCA.txt  Efficiency2D.root  Efficiency2D_PLIV_noConv_1b.root  Efficiency2D_PLV.root  Efficiency2D_PLV_noConv.root  Efficiency2D_PLV_noConv_2b.root  XSection-MC16-13TeV.data  in.txt  output.root.tmp  prw.Zgam_Sh_2211.MC16a.root  prw.Zgam_Sh_2211.MC16d.root  prw.Zgam_Sh_2211.MC16e.root  twz_config.txt
ttWCA/: NLeptonSelector.h  ttWCA.h  ttWCALoader.h
ttWPlotter/: clean.sh  doAll.sh  mergeRegions.py  reader.py  runPlots.C
ttWPlotter/Macros/: checkSys.C  compareHists.C
ttWPlotter/Plotter/: ttWPlotter.cxx  ttWPlotter.h
ttWPlotter/Selector/: ttWSelector.cxx  ttWSelector.h
uctanalysistop/: CMakeLists.txt
utils/: BranchMap.conf  Config.conf  README_MM.md  branchMap.conf  doAll.py  runMMTool.cxx  runTTWCA.cxx
